--- a/.vale.ini
+++ b/.vale.ini
@@ -27,3 +27,8 @@ Google.Units = No
 
 [src/main/resources/org/eolang/motives/atoms/not-empty-atom.md]
 Google.Units = No
+
+[accept]
+Token = [
+  "application" # EO and PHI term, means object application
+]
