--- a/.vale.ini
+++ b/.vale.ini
@@ -7,10 +7,7 @@ MinAlertLevel = suggestion
 Packages = Google, Microsoft, proselint
 
 [accept]
-Token = [
-  ; EO and PHI term, means object application
-  "application"
-]
+Token = ["application"]
 
 [*.md]
 ;; @todo #540:60min Add a new style package - `write-good` - to both this list and the package list.
