bug(#676): object root

--- a/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-methods-without-as-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-methods-without-as-attributes.yaml
@@ -6,9 +6,11 @@ sheets:
 asserts:
   - /defects[count(defect)=0]
 document: |
-  <o base=".bar">
-    <o base="Q.baz">
-      <o base="Q.x" as="α0"/>
+  <object>
+    <o base=".bar">
+      <o base="Q.baz">
+        <o base="Q.x" as="α0"/>
+      </o>
+      <o base="Q.y" as="α0"/>
     </o>
-    <o base="Q.y" as="α0"/>
-  </o>
+  </object>
