--- a/pom.xml
+++ b/pom.xml
@@ -755,6 +755,39 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+            <archive>
+                <manifest>
+                    <mainClass>org.eolang.lints.Main</mainClass>
+                </manifest>
+            </archive>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+        </configuration>
+        <executions>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>single</goal>
+                </goals>
+            </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.qulice</groupId>
+        <artifactId>qulice-maven-plugin</artifactId>
+        <version>0.24.0</version>
+        <configuration>
+            <excludes>
+                <exclude>checkstyle:/design/UseUtilityClass</exclude>
+            </excludes>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
